--- a/content/post/dataeng_elt.adoc
+++ b/content/post/dataeng_elt.adoc
@@ -1,6 +1,6 @@
 ---
 draft: true
-title: 'Data Engineering in 2022: ETL/ELT tools'
+title: 'Data Engineering in 2022: ELT tools'
 date: "2022-11-03T09:46:39Z"
 image: "/images/2022/11/h_IMG_8786.jpeg"
 thumbnail: "/images/2022/11/t_IMG_9297.jpeg"
@@ -22,7 +22,7 @@ In link:/2022/09/14/stretching-my-legs-in-the-data-engineering-ecosystem-in-2022
 
 <!--more-->
 
-The approach that many people use now is one of **EL-T**. That is, get the [raw] data in, and _then_ transform it. I link:/2022/10/02/data-engineering-in-2022-architectures-terminology/[wrote about this in more detail elsewhere]—in this article I'm going to look more at the tools themselves. That said, it's worth recapping why the shift has come about. From my perspective it's driven by a few things. 
+The approach that many people use now is one of **EL-T**. That is, get the [raw] data in, and _then_ transform it. I link:/2022/10/02/data-engineering-in-2022-architectures-terminology/[wrote about this in more detail elsewhere] including the difference between ETL and ELT, and the difference between ELT now and in the past. In this article I'm going to look more at the tools themselves. That said, it's worth recapping why the shift has come about. From my perspective it's driven by a few things. 
 
 * One is the **technology**. It's _cheaper_ to store more data when storage is _decoupled from compute_ (HDFS, S3, etc). It's also possible to _process bigger volumes of data_, with the prevalence of distributed systems (such as Apache Spark) whether on-premises or the ubiquitous _Cloud datawarehouses_ (BigQuery, Snowflake, et al). 
 +
