--- a/content/post/dataeng_intro.adoc
+++ b/content/post/dataeng_intro.adoc
@@ -116,7 +116,7 @@ What I'm going to do is dig into some of the particular areas that have caught m
 * link:/2022/10/02/data-engineering-in-2022-architectures-terminology/[Architectures & Terminology]
 * link:/2022/10/20/data-engineering-in-2022-exploring-dbt-with-duckdb/[Exploring dbt with DuckDB]
 * link:/2022/10/24/data-engineering-in-2022-wrangling-the-feedback-data-from-current-22-with-dbt[Wrangling the feedback data from Current 22 with dbt]
-* link:/2022/11/03/data-engineering-in-2022-etl/elt-tools-orchestration/[ETL/ELT tools]
+* link:/2022/11/03/data-engineering-in-2022-elt-tools/[ELT tools]
 * Query & Transformation Engines [TODO]
 * link:/2022/09/14/data-engineering-resources/[Resources]
 
