DataEng - ELT article (#29)
* Start new ELT article

* finished dbt bit in draft, started on E&L - still WIP

* First draft ready

* Update index links

* Proof read

* Amend title

* Fix index links

* Unmark as draft, and update index links again

* Use more horizontal space for rendering content

* Fix index links

--- a/content/post/dataeng_dbt_duckdb.adoc
+++ b/content/post/dataeng_dbt_duckdb.adoc
@@ -1121,6 +1121,6 @@ With dozens of https://docs.getdbt.com/docs/supported-data-platforms[adaptors] y
 * link:/2022/10/02/data-engineering-in-2022-architectures-terminology/[Architectures & Terminology]
 // * link:/2022/10/20/data-engineering-in-2022-exploring-dbt-with-duckdb/[Exploring dbt with DuckDB]
 * link:/2022/10/24/data-engineering-in-2022-wrangling-the-feedback-data-from-current-22-with-dbt[Wrangling the feedback data from Current 22 with dbt]
+* link:/2022/11/08/data-engineering-in-2022-elt-tools/[ELT tools]
 * Query & Transformation Engines [TODO]
-* ETL/ELT tools & Orchestration [TODO]
 * link:/2022/09/14/data-engineering-resources/[Resources]
