Add singer import API reference

--- a/content/post/dataeng_elt.adoc
+++ b/content/post/dataeng_elt.adoc
@@ -300,6 +300,8 @@ I asked this question on https://www.reddit.com/r/dataengineering/comments/ykznd
 ** https://www.linkedin.com/feed/update/urn:li:activity:6993956725842178048?commentUrn=urn%3Ali%3Acomment%3A%28activity%3A6993956725842178048%2C6994006307997413378%29[Azure Data Factory]
 ** https://www.linkedin.com/feed/update/urn:li:activity:6993956725842178048?commentUrn=urn%3Ali%3Acomment%3A%28activity%3A6993956725842178048%2C6993960606080897024%29[Dagster]
 ** https://www.reddit.com/r/dataengineering/comments/ykznde/comment/iuwi2zp/?utm_source=reddit&utm_medium=web2x&context=3[Meltano / Singer]
+*** https://stitch-docs.netlify.app/docs/integrations/import-api[The Stitch Data / Singer.io ‘import api’] - _"It’s sort of a best-kept secret of the platform and can be used for arbitrary data"_ (thanks `fraser` on dbt Slack for suggesting this)
+
 
 * No/low-code
 +
