--- a/content/post/looking-forward.adoc
+++ b/content/post/looking-forward.adoc
@@ -15,25 +15,28 @@ categories:
 :rouge-css: style
 :rouge-style: github
 
-As we enter December and 2022 draws to a close, so does a significant chapter in my working career. Later this month I'll be leaving Confluent and onto pastures new. 
+As we enter December and 2022 draws to a close, so does a significant chapter in my working career—later this month I'll be leaving Confluent and onto pastures new. 
 
-It's nearly six years since link:/2017/03/10/time-for-a-change/[I wrote] one of these blog entries, and what I want to really do in this one is reflect on how much I've benefitted from my time at Confluent and particularly the people I worked with. 
+
+It's nearly six years since link:/2017/03/10/time-for-a-change/[I wrote] one of these blog entries, and what I want to really do in this one is reflect on how much I've benefited from my time at Confluent and particularly the people with whom I worked. 
 
 <!--more-->
 
-In March 2017 I joined Confluent as a _Partner Technology Evangelist_. In October of that year I spoke at Oracle OpenWorld (as it was called then), and https://twitter.com/tlberglund[some random guy from Confluent ;)] suggested I go and watch some talks at the co-hosted JavaOne conference on a track called "DevRel". DevRel, you say? WTF is that? 
+## Looking Backwards 
+
+In **March 2017** I joined Confluent's Business Development team as a _Partner Technology Evangelist_. In October of that year I spoke at Oracle OpenWorld (as it was called then), and https://twitter.com/tlberglund[a random colleague 😉 who was also there] suggested I go and watch some talks at the co-hosted JavaOne conference on a track called "DevRel". DevRel, you say? WTF is that? 
 
 {{< tweet 914626906783453185 >}}
 
-Turns out this was a turning point for my career, as I learned in talks from https://twitter.com/TheSteve0[Steve Pousty] and https://twitter.com/jbaruch[Baruch Sadogursky] that DevRel was a profession in itself, not just a sideline to try and cram in alongside a day job as I'd been doing for the previous seven years. 
+Turns out this was a turning point for my career. I learnt in talks from https://twitter.com/TheSteve0[Steve Pousty] and https://twitter.com/jbaruch[Baruch Sadogursky] that DevRel was a profession in itself, not just a sideline to try and cram in alongside a day job as I'd been doing for the previous seven years. 
 
 ''''
 
-Fast forward a few months to April 2018 and I've convinced https://twitter.com/tlberglund[Tim Berglund] to take me on as a Developer Advocate in Confluent's DevX team. Here I cut my teeth as a Developer Advocate learning my trade from Tim, and colleagues https://twitter.com/gamussa[Viktor] and https://twitter.com/riferrei[Ricardo]. I learnt all about building authentic communities from the wonderful https://twitter.com/ale_amurray[Ale Murray], and about devrel, communities, stream processing and everything else from https://twitter.com/gwenshap[Gwen Shapira].
+Fast forward a few months to **April 2018** and I've convinced https://twitter.com/tlberglund[Tim Berglund] (_for it was he, the random colleague who pointed me to the DevRel track at JavaOne_) to take me on as a Developer Advocate in his DevX team at Confluent. Here I cut my teeth as a Developer Advocate learning my trade from Tim, and colleagues https://twitter.com/gamussa[Viktor] and https://twitter.com/riferrei[Ricardo]. I learnt all about building authentic communities from the wonderful https://twitter.com/ale_amurray[Ale Murray], and about DevRel, communities, stream processing, and everything else from https://twitter.com/gwenshap[Gwen Shapira].
 
-As well as the practical side of the profession—crafting slides, delivering talks, writing blogs, hacking code—I also learnt a lot about the human side of being a Developer Advocate. It's not all airmiles and smiles - and I wanted to share that, both for those in the profession and perhaps wondering if they're alone in finding it hard, as well as those looking in from the outside and thinking about pursuing it as a career. 
+As well as the practical side of the profession—crafting slides, delivering talks, writing blogs, hacking code—I also learnt a lot about the human side of being a Developer Advocate. It's not all airmiles and smiles, and I wanted to share that—both for those in the profession and perhaps wondering if they're alone in finding it hard, as well as those looking in from the outside and thinking about pursuing it as a career. 
 
-These blogs I wrote about being a Developer Advocate are the ones of which I'm perhaps the most proud. They don't get tons of traffic, they didn't go viral, they certainly didn't make it to HackerNews. But they evidently resonated with quite a lot of people judging on the number of people who have said that they read them and enjoyed them. 
+These blogs I wrote about being a Developer Advocate are perhaps the ones of which I'm the most proud. They don't get tons of traffic, they didn't go viral, they certainly didn't make it to HackerNews. But they evidently resonated with quite a lot of people judging on the number of people who have taken the time to say to me that they read them and enjoyed them. 
 
 * link:/2019/02/09/travelling-for-work-with-kids-at-home/[Travelling for Work, with Kids at Home]
 * link:/2020/12/03/life-as-a-developer-advocate-nine-months-into-a-pandemic/[Life as a Developer Advocate, nine months into a pandemic]
@@ -48,7 +51,7 @@ In a similar vein but a bit more practical, here are a few about being a Develop
 
 ''''
 
-As well as the usual fare of conferences and blogs, I also had the privilege to be involved in Kafka Summit, first as a member of the program committee and then chairing it.
+Developer Advocacy is not just +++<del>shitposting and memes</del>+++ speaking at conferences and writing blogs. It's also engaging with the community, helping developers, and more. Towards the end of 2021 I got the opportunity to take on the position of chair for the Kafka Summit program committee. 
 
 image::/images/2022/12/ksl.jpg[]
 
