Standardise Current 2022 blog category name

--- a/content/post/current22_5k.adoc
+++ b/content/post/current22_5k.adoc
@@ -8,7 +8,7 @@ credit: "https://twitter.com/rmoff/"
 categories:
 - Kafka Summit
 - Running
-- Current
+- Current 2022
 ---
 
 :source-highlighter: rouge
